# src/routes/auth.routes.js
@@ -3,10 +3,13 @@
 'use strict';
 
 const { Router } = require('express');
-const { adminLogin } = require('../controllers/auth.controller');
+const { adminLogin, signup, resetPassword, getMe } = require('../controllers/auth.controller');
 
 const router = Router();
 
 router.post('/admin-login', adminLogin);
+router.post('/signup', signup);
+router.post('/reset-password', resetPassword);
+router.get('/me', getMe);
 
 module.exports = router;
